# opengl-demo

./: .gitignore  CMakeLists.txt  README.md
src/: Graphics.cpp
src/GLAD/: glad.c  glad.h
